src/main/kubernetes/artemis/ingresses/artemis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  labels:
  name: artemis-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "artemis.test1.k.ase.in.tum.de"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service: 
            name: artemis
            port: 
              number: 8080
              #  tls:
              #  - hosts:
              #    - artemis-app.artemis.rancher.localhost
